[package]
name = "kosmetic_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kosmetic_zx = { path = "../kosmetic_zx", default-features = true }
tracing-tracy = { version = "0.8.0", optional = true }
tracing-subscriber = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }
crossbeam-channel = "0.5.1"

[features]
default = []
trace = ["kosmetic_zx/trace-all-slow", "tracing-tracy", "tracing-subscriber", "tracing"]