[package]
name = "kosmetic_zx"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.29", optional = true }
tracing-chrome = { version = "0.3.1", optional = true }
tracing-subscriber = { version = "0.2.0", optional = true }

[features]
trace-deps = ["tracing", "tracing-chrome", "tracing-subscriber"]
trace-memory = ["trace-deps"]
trace-bus = ["trace-deps"]
trace-cpu = ["trace-deps"]
trace-ula = ["trace-deps"]
trace-all = ["trace-memory","trace-cpu","trace-bus","trace-ula","trace-deps"]
