[package]
name = "kosmetic_zx"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", optional = true }
indexmap = { version = "1.7.0", optional = true }
sdl2 = { version = "0.35.1", features=["bundled"] }
derive_more = "0.99.16"

[features]
default = ["btree-mem-map"]
trace-deps = ["tracing"]
trace-memory = ["trace-deps"]
trace-bus = ["trace-deps"]
trace-cpu = ["trace-deps"]
trace-ula = ["trace-deps"]
trace-all = ["trace-memory","trace-cpu","trace-bus","trace-ula","trace-deps"]
hash-mem-map = []
btree-mem-map = []
index-mem-map = ["indexmap"]

