[package]
name = "kosmetic_zx"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1", optional = true }
indexmap = { version = "1.7.0", optional = true }
derive_more = "0.99.16"
sdl2 = { version = "0.35.1" }
crossbeam-channel = { version = "0.5.1" }


[features]
default = ["btree-mem-map"]
trace-deps = ["tracing"]
trace-memory = ["trace-deps"]
trace-bus = ["trace-deps"]
trace-cpu = ["trace-deps"]
trace-ula = ["trace-deps"]
trace-clock = ["trace-deps"]
trace-all = ["trace-memory","trace-cpu","trace-bus","trace-ula","trace-deps"]
trace-all-slow = ["trace-all", "trace-clock"]
hash-mem-map = []
btree-mem-map = []
index-mem-map = ["indexmap"]



